monitoring/monitoring/1_ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: monitoring
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: monitoring
  name: redirect-kiosk
spec:
  replacePathRegex:
    regex: ^/(?!.*public/(font|build|img)/).*
    path: /d/newtechstack/dashboard?orgId=1&refresh=5s&kiosk
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-redirect-https@kubernetescrd, monitoring-redirect-kiosk@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: grafana-cert
      hosts:
        - grafana.cluster.newtechstack.fr
  rules:
    - host: grafana.cluster.newtechstack.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
